--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,9 @@ body {
   background: #1a0930;
   z-index: 3;
 }
+section{
+  padding: 75px 0px
+}
 a,
 a:visited{
   color:var(--main-white-color)
@@ -135,6 +138,8 @@ main.page{
   transition: .3s linear;
 }
 .sub-menu {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 35px;
   z-index: 5;
@@ -247,12 +252,15 @@ main.page{
   align-items: center;  
 } 
 .page__main-block {
-  margin-top: 100px;
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  overflow: hidden;
+  padding-bottom: 0;
 }
+
 .background-main1 {
   position: absolute;
   /* z-index: 1; */
@@ -358,6 +366,7 @@ main.page{
   display: none;
 }
 .main-button_href {
+  max-width: 280px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -499,10 +508,10 @@ main.page{
 .page__services-block {
   position: relative;
     background: #1a0930;
-    z-index: 10;
+    z-index: 6;
 }
 .services-block__title_h2 {
-  padding-top: 127px;
+  /* padding-top: 127px; */
   margin-bottom: 53px;
 }
 .services-block__subtitle {
@@ -565,12 +574,13 @@ main.page{
 
 .page__choice-block {
   position: relative;
-  margin-top: 158px;
+  /* margin-top: 158px; */
 }
 .choice-block__body {
   position: relative;
   display: flex;
   justify-content: space-between;
+  z-index: 7;
 }
 .background-choice {
   position: absolute;
@@ -582,6 +592,18 @@ main.page{
   filter: blur(100px);
   transform: rotate(-80.12deg);
 }
+.background-choice-img {
+  position: absolute;
+  width: 50vw;
+  height: 1043px;
+  background-image: url(../img/bg-choises.png);
+  background-repeat: no-repeat;
+  right: 0;
+  top: -329px;
+  /* background-size: cover; */
+  z-index: 6;
+}
+
 .choice-block__text {
   display: flex;
   flex-direction: column;
@@ -592,6 +614,9 @@ main.page{
 .choice-block__title_h2 {
   line-height: 48px;
   text-align: left;
+}
+.choice-block__title_h2-mobile{
+  display: none
 }
 .choice-block__subtitle {
   margin-top: 30px;
@@ -642,7 +667,7 @@ main.page{
   max-width: 90vw;
 }
 .cases-block__body {
-  margin-bottom: 123px;
+  /* margin-bottom: 123px; */
 }
 .case_slide_wrapper {
   position:relative;
@@ -680,7 +705,7 @@ main.page{
   border-radius: 5px;
 }
 .cases-block__title {
-  margin-top: 185px;
+  /* margin-top: 185px; */
 }
 .cases-block__title_h2 {
   margin-bottom: 50px;
@@ -699,19 +724,28 @@ main.page{
 .reviews-block__body {
   position: relative;
   z-index: 3;
-  margin-bottom: 164px;
+  /* margin-bottom: 164px; */
 }
 .reviews_gradient_bg {
   position: absolute;
   width: 449.03px;
-height: 367.72px;
-left: 0.4px;
-top: 0.7px;
-
-background: radial-gradient(50.09% 124.66% at 65.27% 55.89%, rgba(73, 0, 107, 0.396) 0%, rgba(255, 31, 233, 0.4) 57.07%, rgba(222, 129, 255, 0.4) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
-filter: blur(100px);
-transform: rotate(-36.12deg);
+  height: 367.72px;
+  left: 0.4px;
+  top: 0.7px;
+  background: radial-gradient(50.09% 124.66% at 65.27% 55.89%, rgba(73, 0, 107, 0.396) 0%, rgba(255, 31, 233, 0.4) 57.07%, rgba(222, 129, 255, 0.4) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  filter: blur(100px);
+  transform: rotate(-36.12deg);
 }
+
+.reviews_gradient_bg-img{
+  position: absolute;
+  top: -118px;
+  width: 100vw;
+  height: 851px;
+  background-image: url(../img/bg-reviews.png);
+  background-repeat: no-repeat;
+}
+
 .triple_stars {
   position: absolute;
   z-index: 5;
@@ -840,7 +874,7 @@ z-index: 1;
   align-items: center;
 }
 .useful-articles__title {
-  margin-top: 102px;
+  /* margin-top: 102px; */
   margin-bottom: 74px;
 }
 .useful-articles__columns {
@@ -894,7 +928,7 @@ z-index: 1;
   display: flex;
   flex-direction: column;
   /* align-items: center;  */
-  margin-bottom: 187px;
+  /* margin-bottom: 187px; */
   position: relative;
 }
 .question-triple_stars_left {
@@ -910,7 +944,7 @@ z-index: 1;
   top: 70px;
 }
 .question__title {
-  margin-top: 94px;
+  /* margin-top: 94px; */
   margin-bottom: 47px;
 }
 .question__block {
