--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -296,7 +296,9 @@
     .choice-block__title_h2-mobile{
         display: block;
     }
-    
+    section{
+        padding:40px 0
+    }
 }
 @media(max-width:630px){
     .main-title{
