--- a/static/css/style.css
+++ b/static/css/style.css
@@ -946,6 +946,13 @@ z-index: 1;
   text-align: center;
   color: var(--main-white-color);
 }
+.useful-articles__body .articles__img{
+  height:200px
+}
+.useful-articles__body .articles__img img{
+  max-height:200px;
+  object-fit: cover;
+}
 
 /*------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------page__question----------------------------------*/
