hide mainbg1 and mainbg2 on 768px

--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -243,6 +243,10 @@
 }
 
 @media(max-width:768px){
+    .main-background2-img,
+    .main-background3-img{
+        display:none
+    }
     .main-3columns{
         display: none;
     }
