--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1321,6 +1321,25 @@ p.tariff_price {
 }
 
 /*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------form-----------------------------------------*/
+
+.wpcf7-form input,
+.wpcf7-form textarea {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  margin: 5px 0;
+}
+
+.wpcf7-form input::placeholder,
+.wpcf7-form textarea::placeholder {
+  color: var(--article-text-color);
+  text-transform: uppercase;
+  font-family: "Inter";
+}
+
+/*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer-----------------------------------------*/
 
 .footer {
