--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1322,19 +1322,25 @@ p.tariff_price {
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------form-----------------------------------------*/
-
+.wpcf7-form{
+  padding: 20px
+}
 .wpcf7-form input,
 .wpcf7-form textarea {
   width: 100%;
   height: 40px;
   border-radius: 5px;
-  border: none;
+  border: 1px solid #3f3354;
+  background-color: #200e38;
   margin: 5px 0;
+  padding-left: 8px
 }
-
+.wpcf7-form textarea{
+  padding-top: 8px
+}
 .wpcf7-form input::placeholder,
 .wpcf7-form textarea::placeholder {
-  color: var(--article-text-color);
+  color: var(--main-white-color);
   text-transform: uppercase;
   font-family: "Inter";
 }
