--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -300,9 +300,22 @@
     .choice-block__title_h2-mobile{
         display: block;
     }
+    .service-selection__lightning_left,
+    .service-selection__lightning_right {
+        display: none;
+    }    
+    .service-selection__content{
+        margin-left:0;
+    }
+    .service-selection__body{
+        
+        justify-content: center;
+    }
+    
     section{
         padding:40px 0
     }
+    
 }
 @media(max-width:630px){
     .main-title{
@@ -460,12 +473,7 @@
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------category-list----------------------------------*/
 @media (max-width: 768px) {
-    .service-selection__lightning_left {
-        display: none;
-    }
-    .service-selection__lightning_right {
-        display: none;
-    }
+    
 }
 @media(max-width: 768px) {
     .category-list_service-selection {
