--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1063,8 +1063,7 @@ margin-right: 30px;
 .page-header {
   color: var(--main-white-color);
   font-family: "Inter";
-  margin-bottom: 48px;
-  padding: 0
+  padding-top: 25px
 }
 .page-header__breadcrumbs {
   margin: 25px 0px;
