--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -154,6 +154,25 @@
     .header__hrVert{
         display: none;
     }
+    .menu__item{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .sub-menu{
+        background: none;
+        box-shadow: none;
+        border: none;
+        border-top: 1px solid #3f3354;
+        border-bottom: 1px solid #3f3354;
+        
+    }
+    .menu-item:hover>.sub-menu {
+        visibility: visible;
+        opacity: 1;
+        transform: rotateX(0deg);
+        position: static;
+    }
 }
 
 /*---------------------------------------------------------------------------------------------------*/
@@ -303,8 +322,8 @@
     .service-selection__lightning_left,
     .service-selection__lightning_right,
     .question-triple_stars_left,
-    .question-triple_stars_right
-     {
+    .question-triple_stars_right,
+    .reviews-block__body .triple_stars {
         display: none;
     }    
     .service-selection__content{
