add loadmore btn on blog TEST

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1262,6 +1262,15 @@ p.tariff_price {
 .blog-block__grid .articles__item{
   width: 100%
 }
+
+.blog-block__grid .articles__img {
+  height: 200px
+}
+
+.blog-block__grid .articles__img img {
+  max-height: 200px;
+  object-fit: cover;
+}
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------blog-article-----------------------------------*/
 
