--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1388,7 +1388,7 @@ section.page__contacts-map{
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------form-----------------------------------------*/
 .wpcf7-form{
-  padding: 20px 
+  padding: 20px 0
 }
 .wpcf7-form input,
 .wpcf7-form textarea {
