--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -177,6 +177,7 @@
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-header------------------------------------*/
+
 @media(max-width:1130px) {
     .main-block__body {
         position: relative;
@@ -262,6 +263,11 @@
 }
 
 @media(max-width:768px){
+    .main-background1-img{        
+        left: -793px;
+        top: -737px;
+        background: radial-gradient(circle, rgba(26,9,48,0.9864320728291317) 7%, rgba(86,18,159,1) 59%, rgba(99,49,133,0.9444152661064426) 100%);
+    }
     .main-background2-img,
     .main-background3-img{
         display:none
