--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -325,6 +325,14 @@
     .choice-block__title_h2-mobile{
         display: block;
     }
+    .background-choice-img{
+        width: 73vw;
+        height: 304px;
+        right: 0;
+        top: 156px;
+        background: radial-gradient(51.61% 115.36% at 67.24% 51.72%, rgba(73, 0, 107, 0.396) 0%, rgba(255, 31, 233, 0.4) 57.07%, rgba(222, 129, 255, 0.4) 100%);
+        filter: blur(100px);
+    }
     .service-selection__lightning_left,
     .service-selection__lightning_right,
     .question-triple_stars_left,
@@ -339,7 +347,15 @@
         
         justify-content: center;
     }
-    
+    .reviews_gradient_bg-img{
+        top: 102px;
+        right: 0;
+        width: 45vw;
+        height: 339px;
+        background: radial-gradient(50.09% 124.66% at 65.27% 55.89%, rgba(73, 0, 107, 0.396) 0%, rgba(255, 31, 233, 0.4) 57.07%, rgba(222, 129, 255, 0.4) 100%);
+        filter: blur(100px);
+    }
+
     section{
         padding:40px 0
     }
