--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1179,6 +1179,9 @@ p.tariff_price {
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------article-page-----------------------------------*/
 
+.service-article_text img {
+  width: auto;
+}
 .service-article_img {
   width: 100%;
   height: 324px;
