--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -165,9 +165,9 @@ main.page{margin-top:68px}
 .page__service-offer .cases-block__title{margin-top:0}
 .offer_block-text,.offer_block-form{width:50%}
 .offer_block-tariff{width:30%;display:flex!important;flex-direction:column;align-items:center;gap:20px;border:1px solid #3f3354;border-radius:5px;padding:10px;box-shadow:0 0 5px #3f3354;background:#1f0c37;margin:0 10px}
-.tariff_title{font-weight:400;text-transform:uppercase}
-.tariff_desc{font-size:14px;color:var(--article-text-color)}
-p.tariff_price{font-size:14px}
+.tariff_title{font-weight:400;text-transform:uppercase;text-align: center}
+.tariff_desc{font-size:14px;color:var(--article-text-color);text-align: center}
+p.tariff_price{font-size:14px;text-align: center}
 .tariff_price span{font-size:20px;font-weight:600}
 .tariff_list{border-top:1px solid #3f3354;border-bottom:1px solid #3f3354;width:100%}
 .order_btn{border:1px solid #3f3354;padding:5px 20px;max-width:200px;text-align:center;border-radius:5px;font-size:20px;background:#1a0930;color:var(--main-white-color)}
