--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1116,7 +1116,7 @@ margin-right: 30px;
 .page__service-offer .cases-block__title{
   margin-top: 0
 }
-.offer_block-wrapper{
+.offer_block-top{
   display: flex
 }
 .offer_block-text,
