--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -174,6 +174,10 @@ p.tariff_price{font-size:14px;text-align: center}
 .order_btn{margin: 0 auto;border:1px solid #3f3354;padding:5px 20px;max-width:200px;text-align:center;border-radius:5px;font-size:20px;background:#1a0930;color:var(--main-white-color)}
 .order_btn:hover{cursor:pointer;background:#1a093079;box-shadow:0 0 5px #3f3354}
 .tariff_slider{display:none}
+.tariff_slider .slick-track{display:flex}
+.offer_block-tariff{flex: 0 0 auto; height: auto;justify-content: space-between}
+.offer_block-tariff-top{border-bottom:1px solid #3f3354;width: 100%;padding-bottom: 10px}
+.offer_block-btn-wrapper{border-top:1px solid #3f3354;width:100%;padding-top:10px}
 .service-article_text img{width:auto}
 .service-article_img{width:100%;height:324px;object-fit:cover;border-radius:5px;margin-bottom:48px}
 .service-article_text{font-family:"Inter";color:var(--article-text-color);font-weight:400;font-size:16px}
