--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1176,6 +1176,24 @@ p.tariff_price {
 .tariff_slider{
   display: none;
 }
+.tariff_slider .slick-track{
+  display:flex
+}
+.offer_block-tariff{
+  flex: 0 0 auto; 
+  height: auto;
+  justify-content: space-between
+}
+.offer_block-tariff-top{
+  border-bottom:1px solid #3f3354;
+  width: 100%;
+  padding-bottom: 10px
+}
+.offer_block-btn-wrapper{
+  border-top:1px solid #3f3354;
+  width:100%;
+  padding-top:10px
+}
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------article-page-----------------------------------*/
 
