--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -173,7 +173,7 @@ p.tariff_price{font-size:14px;text-align: center}
 .tariff_list{width:100%}
 .order_btn{margin: 0 auto;border:1px solid #3f3354;padding:5px 20px;max-width:200px;text-align:center;border-radius:5px;font-size:20px;background:#1a0930;color:var(--main-white-color)}
 .order_btn:hover{cursor:pointer;background:#1a093079;box-shadow:0 0 5px #3f3354}
-.tariff_slider{display:none}
+/* .tariff_slider{display:none} */
 .tariff_slider .slick-track{display:flex}
 .offer_block-tariff{flex: 0 0 auto; height: auto;justify-content: space-between}
 .offer_block-tariff-top{border-bottom:1px solid #3f3354;width: 100%;padding-bottom: 10px}
