fix mobile submenu

--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -173,6 +173,10 @@
         transform: rotateX(0deg);
         position: static;
     }
+    li.menu-item-has-children > a{
+        pointer-events: none; 
+        cursor: default;  
+    }
 }
 
 /*---------------------------------------------------------------------------------------------------*/
