--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -178,7 +178,7 @@ p.tariff_price{font-size:14px;text-align: center}
 .offer_block-tariff.slick-slide{flex: 0 0 auto; height: auto;justify-content: space-between}
 .offer_block-tariff-top{border-bottom:1px solid #3f3354;width: 100%;padding-bottom: 10px}
 .offer_block-btn-wrapper{border-top:1px solid #3f3354;width:100%;padding-top:10px}
-.service_text-block {border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin-top: 50px 0;background-color: var(--main-white-color);color: #1a0930;font-weight: 600}
+.service_text-block {border: 1px solid #3f3354;border-radius: 5px;padding: 50px;margin: 50px 0;background-color: var(--main-white-color);color: #1a0930;font-weight: 600}
 section.page__service-offer,section.page__service-offer{padding: 0;padding-top: 75px}
 .service-article_text img{width:auto}
 .service-article_img{width:100%;height:324px;object-fit:cover;border-radius:5px;margin-bottom:48px}
