--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1425,6 +1425,31 @@ section.page__contacts-map{
 }
 
 /*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------about-----------------------------------------*/
+.page__about_wrapper{
+  display: flex;
+  align-items: center;
+  gap: 20px
+}
+
+.page__about_wrapper-left,
+.page__about_wrapper-right{
+  width: 50%
+}
+
+.about_item {
+  display: flex;
+  padding: 10px 0px;
+  align-items: center;
+  gap: 15px
+}
+
+.about_item-number {
+  font-size: 40px;
+  color: #3f3354
+}
+
+/*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------form-----------------------------------------*/
 .wpcf7-form{
   padding: 20px 0
