--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -19,7 +19,7 @@ main.page{margin-top:68px}
 .menu__list{display:flex;gap:30px;align-items:center;margin:0;padding:0}
 .menu__item{display:flex;align-items:stretch;float:left;position:relative}
 .menu__link{display:flex;font-family:"Open Sans";font-style:normal;font-weight:400;font-size:16px;line-height:24px;color:var(--main-white-color);align-items:center;text-decoration:none;transition:.3s linear}
-.sub-menu{display:flex;flex-direction:column;position:absolute;top:35px;z-index:5;min-width:200px;border-radius:3px;border:1px solid var(--main-white-color);visibility:hidden;opacity:0;background:#1f0c37;transform-origin:0 0;transform:rotateX(-90deg);transition:.3s linear;box-shadow:0 0 5px var(--main-white-color)}
+.sub-menu{display:flex;flex-direction:column;position:absolute;top:25px;z-index:5;min-width:200px;border-radius:3px;border:1px solid var(--main-white-color);visibility:hidden;opacity:0;background:#1f0c37;transform-origin:0 0;transform:rotateX(-90deg);transition:.5s linear;box-shadow:0 0 5px var(--main-white-color)}
 .menu-item:hover>.sub-menu{visibility:visible;opacity:1;transform:rotateX(0deg)}
 .sub-menu .menu-item{position:relative}
 .sub-menu .menu-item .menu__link{color:#fff;padding:10px 20px;font-size:13px}
@@ -221,6 +221,11 @@ section.page__contacts-map{padding:0 0 50px}
 .page__contacts_map-wrapper .form{padding:0 20px}
 .map{height:500px;padding:0;background-image:url(/wp-content/uploads/2021/11/map-new.png);background-position:center center}
 .map iframe{border-radius:5px}
+.page__about_wrapper{display: flex;align-items: center;padding-top: 20px;gap: 20px}
+.page__about_wrapper-left,.page__about_wrapper-right{width: 50%}
+.about_item {display: flex;padding: 10px 0px;align-items: center;gap: 15px}
+.about_item-number {font-size: 40px;color: #3f3354}
+.thrid_block_about .page__about_wrapper {padding-bottom: 20px}
 .wpcf7-form{padding:20px 0}
 .wpcf7-form input,.wpcf7-form textarea{width:100%;height:40px;border-radius:5px;border:1px solid #3f3354;background-color:#200e38;margin:5px 0;padding-left:8px;color: var(--main-white-color)}
 .wpcf7-form textarea{padding-top:8px}
