--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1255,6 +1255,10 @@ section.page__service-offer
   margin-bottom: 20px;
 }
 
+.service-article_text b{
+  color: var(--main-white-color)
+}
+
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-blog--------------------------------------*/
 
