--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1255,7 +1255,8 @@ section.page__service-offer
   margin-bottom: 20px;
 }
 
-.service-article_text b{
+.service-article_text b,
+.service-article_text strong{
   color: var(--main-white-color)
 }
 
