--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1429,12 +1429,40 @@ section.page__contacts-map{
   height: 500px;
   padding: 0;
   background-image: url(/wp-content/uploads/2021/11/map-new.png);
-  background-position: center center
+  background-position: center center;
+  border-radius: 5px;
+  box-shadow: 0 0 5px var(--main-white-color)
 }
 .map iframe{
   border-radius: 5px;
 }
 
+.page__contacts.info_block {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 30px;
+}
+
+.contacts_item-body {
+  display: flex;
+  flex-direction: column;
+}
+
+span.contacts_item-text {
+  display: flex;
+  flex-direction: column;
+}
+
+span.contacts_item-title {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 20px;
+  padding-bottom: 15px;
+}
+
+.contacts_item-body a {
+  text-decoration: underline;
+}
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------about-----------------------------------------*/
 .page__about_wrapper{
